--- a/index.html
+++ b/index.html
@@ -8,7 +8,60 @@
 </head>
 
 <body>
-    
+    <h1>Weather Dashboard</h1>
+    <div class="container">
+        <div class="weather-input">
+        <h3>Enter a City Name</h3>
+        <input class="city-input" type="text" placeholder="E.g., New York, Chicago, Dallas">
+        <button class="search-btn">Search</button>
+        <div class="separator"></div>
+        <button class="location-btn">Use Current Location</button>
+        </div>
+        <div class="weather-data">
+            <div class="current-weather">
+               <div class="details">
+                 <h2>________ ( _______ )</h2>
+                 <h6>Temperature: __°F</h6>
+                 <h6>Wind: __ mph</h6>
+                 <h6>Humidity: __ %</h6>
+               </div>
+            </div>
+            <div class="days-forecast">
+                <h2>5-Day Forecast</h2>
+                <ul class="weather-cards">
+                    <li class="card">
+                        <h3>( ______ )</h3>
+                        <h6>Temperature: __°F</h6>
+                        <h6>Wind: __ mph</h6>
+                        <h6>Humidity: __ %</h6>
+                    </li>
+                    <li class="card">
+                        <h3>( ______ )</h3>
+                        <h6>Temperature: __°F</h6>
+                        <h6>Wind: __ mph</h6>
+                        <h6>Humidity: __ %</h6>
+                    </li>
+                    <li class="card">
+                        <h3>( ______ )</h3>
+                        <h6>Temperature: __°F</h6>
+                        <h6>Wind: __ mph</h6>
+                        <h6>Humidity: __ %</h6>
+                    </li>
+                    <li class="card">
+                        <h3>( ______ )</h3>
+                        <h6>Temperature: __°F</h6>
+                        <h6>Wind: __ mph</h6>
+                        <h6>Humidity: __ %</h6>
+                    </li>
+                    <li class="card">
+                        <h3>( ______ )</h3>
+                        <h6>Temperature: __°F</h6>
+                        <h6>Wind: __ mph</h6>
+                        <h6>Humidity: __ %</h6>
+                    </li>
+                </ul>
+            </div>
+        </div>
 
     <script src="script.js"></script>
 </body>
