--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
         <h3>Enter a City Name</h3>
         <input class="city-input" type="text" placeholder="E.g., New York, Chicago, Dallas">
         <button class="search-btn">Search</button>
-        <div class="separator"></div>
         <button class="location-btn">Use Current Location</button>
+        <div class="separator"></div>
+        <div class="search-history"></div>
         </div>
         <div class="weather-data">
             <div class="current-weather">
