--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         <button class="search-btn">Search</button>
         <button class="location-btn">Use Current Location</button>
         <div class="separator"></div>
-        <div class="search-history"></div>
+        <div class="search-history">
+            <!-- Search history buttons will be inserted here -->
+        </div>
         </div>
         <div class="weather-data">
             <div class="current-weather">
